y.output
   0  $accept : Prog $end

   1  Prog : Inicio

   2  Inicio :
   3         | Tipo IDENT RestoGlobal
   4         | VOID IDENT '(' ListaParametrosOuVazio ')' Bloco ListaFuncoes

   5  RestoGlobal : RestoLId ';' Inicio
   6              | '(' ListaParametrosOuVazio ')' Bloco ListaFuncoes

   7  RestoLId : ',' IDENT RestoLId
   8           |

   9  Tipo : INT
  10       | DOUBLE
  11       | BOOLEAN

  12  ListaFuncoes : ListaFuncoes Funcao
  13               |

  14  Funcao : TipoOuVoid IDENT '(' ListaParametrosOuVazio ')' Bloco

  15  TipoOuVoid : VOID
  16             | Tipo

  17  ListaParametrosOuVazio : ListaParametros
  18                         |

  19  ListaParametros : Tipo IDENT
  20                  | Tipo IDENT ',' ListaParametros

  21  Bloco : '{' LCmd '}'

  22  LCmd : Cmd LCmd
  23       |

  24  Cmd : Bloco
  25      | IF '(' E ')' Cmd
  26      | IF '(' E ')' Cmd ELSE Cmd
  27      | WHILE '(' E ')' Cmd
  28      | E ';'

  29  E : E '=' E
  30    | E '+' E
  31    | E '*' E
  32    | E '/' E
  33    | E '>' E
  34    | E AND E
  35    | NUM
  36    | IDENT
  37    | '(' E ')'

state 0
	$accept : . Prog $end  (0)
	Inicio : .  (2)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	VOID  shift 4
	$end  reduce 2

	Prog  goto 5
	Inicio  goto 6
	Tipo  goto 7


state 1
	Tipo : INT .  (9)

	.  reduce 9


state 2
	Tipo : DOUBLE .  (10)

	.  reduce 10


state 3
	Tipo : BOOLEAN .  (11)

	.  reduce 11


state 4
	Inicio : VOID . IDENT '(' ListaParametrosOuVazio ')' Bloco ListaFuncoes  (4)

	IDENT  shift 8
	.  error


state 5
	$accept : Prog . $end  (0)

	$end  accept


state 6
	Prog : Inicio .  (1)

	.  reduce 1


state 7
	Inicio : Tipo . IDENT RestoGlobal  (3)

	IDENT  shift 9
	.  error


state 8
	Inicio : VOID IDENT . '(' ListaParametrosOuVazio ')' Bloco ListaFuncoes  (4)

	'('  shift 10
	.  error


state 9
	Inicio : Tipo IDENT . RestoGlobal  (3)
	RestoLId : .  (8)

	'('  shift 11
	','  shift 12
	';'  reduce 8

	RestoGlobal  goto 13
	RestoLId  goto 14


state 10
	Inicio : VOID IDENT '(' . ListaParametrosOuVazio ')' Bloco ListaFuncoes  (4)
	ListaParametrosOuVazio : .  (18)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	')'  reduce 18

	Tipo  goto 15
	ListaParametrosOuVazio  goto 16
	ListaParametros  goto 17


state 11
	RestoGlobal : '(' . ListaParametrosOuVazio ')' Bloco ListaFuncoes  (6)
	ListaParametrosOuVazio : .  (18)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	')'  reduce 18

	Tipo  goto 15
	ListaParametrosOuVazio  goto 18
	ListaParametros  goto 17


state 12
	RestoLId : ',' . IDENT RestoLId  (7)

	IDENT  shift 19
	.  error


state 13
	Inicio : Tipo IDENT RestoGlobal .  (3)

	.  reduce 3


state 14
	RestoGlobal : RestoLId . ';' Inicio  (5)

	';'  shift 20
	.  error


state 15
	ListaParametros : Tipo . IDENT  (19)
	ListaParametros : Tipo . IDENT ',' ListaParametros  (20)

	IDENT  shift 21
	.  error


state 16
	Inicio : VOID IDENT '(' ListaParametrosOuVazio . ')' Bloco ListaFuncoes  (4)

	')'  shift 22
	.  error


state 17
	ListaParametrosOuVazio : ListaParametros .  (17)

	.  reduce 17


state 18
	RestoGlobal : '(' ListaParametrosOuVazio . ')' Bloco ListaFuncoes  (6)

	')'  shift 23
	.  error


state 19
	RestoLId : ',' IDENT . RestoLId  (7)
	RestoLId : .  (8)

	','  shift 12
	';'  reduce 8

	RestoLId  goto 24


state 20
	RestoGlobal : RestoLId ';' . Inicio  (5)
	Inicio : .  (2)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	VOID  shift 4
	$end  reduce 2

	Inicio  goto 25
	Tipo  goto 7


state 21
	ListaParametros : Tipo IDENT .  (19)
	ListaParametros : Tipo IDENT . ',' ListaParametros  (20)

	','  shift 26
	')'  reduce 19


state 22
	Inicio : VOID IDENT '(' ListaParametrosOuVazio ')' . Bloco ListaFuncoes  (4)

	'{'  shift 27
	.  error

	Bloco  goto 28


state 23
	RestoGlobal : '(' ListaParametrosOuVazio ')' . Bloco ListaFuncoes  (6)

	'{'  shift 27
	.  error

	Bloco  goto 29


state 24
	RestoLId : ',' IDENT RestoLId .  (7)

	.  reduce 7


state 25
	RestoGlobal : RestoLId ';' Inicio .  (5)

	.  reduce 5


state 26
	ListaParametros : Tipo IDENT ',' . ListaParametros  (20)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	.  error

	Tipo  goto 15
	ListaParametros  goto 30


state 27
	Bloco : '{' . LCmd '}'  (21)
	LCmd : .  (23)

	IF  shift 31
	WHILE  shift 32
	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	'{'  shift 27
	'}'  reduce 23

	Bloco  goto 36
	LCmd  goto 37
	Cmd  goto 38
	E  goto 39


state 28
	Inicio : VOID IDENT '(' ListaParametrosOuVazio ')' Bloco . ListaFuncoes  (4)
	ListaFuncoes : .  (13)

	.  reduce 13

	ListaFuncoes  goto 40


state 29
	RestoGlobal : '(' ListaParametrosOuVazio ')' Bloco . ListaFuncoes  (6)
	ListaFuncoes : .  (13)

	.  reduce 13

	ListaFuncoes  goto 41


state 30
	ListaParametros : Tipo IDENT ',' ListaParametros .  (20)

	.  reduce 20


state 31
	Cmd : IF . '(' E ')' Cmd  (25)
	Cmd : IF . '(' E ')' Cmd ELSE Cmd  (26)

	'('  shift 42
	.  error


state 32
	Cmd : WHILE . '(' E ')' Cmd  (27)

	'('  shift 43
	.  error


state 33
	E : NUM .  (35)

	.  reduce 35


state 34
	E : IDENT .  (36)

	.  reduce 36


state 35
	E : '(' . E ')'  (37)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 44


state 36
	Cmd : Bloco .  (24)

	.  reduce 24


state 37
	Bloco : '{' LCmd . '}'  (21)

	'}'  shift 45
	.  error


state 38
	LCmd : Cmd . LCmd  (22)
	LCmd : .  (23)

	IF  shift 31
	WHILE  shift 32
	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	'{'  shift 27
	'}'  reduce 23

	Bloco  goto 36
	LCmd  goto 46
	Cmd  goto 38
	E  goto 39


state 39
	Cmd : E . ';'  (28)
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)

	AND  shift 47
	'='  shift 48
	'>'  shift 49
	'+'  shift 50
	'*'  shift 51
	'/'  shift 52
	';'  shift 53
	.  error


state 40
	Inicio : VOID IDENT '(' ListaParametrosOuVazio ')' Bloco ListaFuncoes .  (4)
	ListaFuncoes : ListaFuncoes . Funcao  (12)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	VOID  shift 54
	$end  reduce 4

	Tipo  goto 55
	Funcao  goto 56
	TipoOuVoid  goto 57


state 41
	RestoGlobal : '(' ListaParametrosOuVazio ')' Bloco ListaFuncoes .  (6)
	ListaFuncoes : ListaFuncoes . Funcao  (12)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	VOID  shift 54
	$end  reduce 6

	Tipo  goto 55
	Funcao  goto 56
	TipoOuVoid  goto 57


state 42
	Cmd : IF '(' . E ')' Cmd  (25)
	Cmd : IF '(' . E ')' Cmd ELSE Cmd  (26)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 58


state 43
	Cmd : WHILE '(' . E ')' Cmd  (27)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 59


state 44
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)
	E : '(' E . ')'  (37)

	AND  shift 47
	'='  shift 48
	'>'  shift 49
	'+'  shift 50
	'*'  shift 51
	'/'  shift 52
	')'  shift 60
	.  error


state 45
	Bloco : '{' LCmd '}' .  (21)

	.  reduce 21


state 46
	LCmd : Cmd LCmd .  (22)

	.  reduce 22


state 47
	E : E AND . E  (34)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 61


state 48
	E : E '=' . E  (29)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 62


state 49
	E : E '>' . E  (33)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 63


state 50
	E : E '+' . E  (30)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 64


state 51
	E : E '*' . E  (31)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 65


state 52
	E : E '/' . E  (32)

	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	.  error

	E  goto 66


state 53
	Cmd : E ';' .  (28)

	.  reduce 28


state 54
	TipoOuVoid : VOID .  (15)

	.  reduce 15


state 55
	TipoOuVoid : Tipo .  (16)

	.  reduce 16


state 56
	ListaFuncoes : ListaFuncoes Funcao .  (12)

	.  reduce 12


state 57
	Funcao : TipoOuVoid . IDENT '(' ListaParametrosOuVazio ')' Bloco  (14)

	IDENT  shift 67
	.  error


state 58
	Cmd : IF '(' E . ')' Cmd  (25)
	Cmd : IF '(' E . ')' Cmd ELSE Cmd  (26)
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)

	AND  shift 47
	'='  shift 48
	'>'  shift 49
	'+'  shift 50
	'*'  shift 51
	'/'  shift 52
	')'  shift 68
	.  error


state 59
	Cmd : WHILE '(' E . ')' Cmd  (27)
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)

	AND  shift 47
	'='  shift 48
	'>'  shift 49
	'+'  shift 50
	'*'  shift 51
	'/'  shift 52
	')'  shift 69
	.  error


state 60
	E : '(' E ')' .  (37)

	.  reduce 37


state 61
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)
	E : E AND E .  (34)

	'>'  shift 49
	'+'  shift 50
	'*'  shift 51
	'/'  shift 52
	AND  reduce 34
	'='  reduce 34
	')'  reduce 34
	';'  reduce 34


state 62
	E : E . '=' E  (29)
	E : E '=' E .  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)

	AND  shift 47
	'='  shift 48
	'>'  shift 49
	'+'  shift 50
	'*'  shift 51
	'/'  shift 52
	')'  reduce 29
	';'  reduce 29


state 63
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E '>' E .  (33)
	E : E . AND E  (34)

	'+'  shift 50
	'*'  shift 51
	'/'  shift 52
	AND  reduce 33
	'='  reduce 33
	'>'  reduce 33
	')'  reduce 33
	';'  reduce 33


state 64
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E '+' E .  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)

	'*'  shift 51
	'/'  shift 52
	AND  reduce 30
	'='  reduce 30
	'>'  reduce 30
	'+'  reduce 30
	')'  reduce 30
	';'  reduce 30


state 65
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E '*' E .  (31)
	E : E . '/' E  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)

	.  reduce 31


state 66
	E : E . '=' E  (29)
	E : E . '+' E  (30)
	E : E . '*' E  (31)
	E : E . '/' E  (32)
	E : E '/' E .  (32)
	E : E . '>' E  (33)
	E : E . AND E  (34)

	.  reduce 32


state 67
	Funcao : TipoOuVoid IDENT . '(' ListaParametrosOuVazio ')' Bloco  (14)

	'('  shift 70
	.  error


state 68
	Cmd : IF '(' E ')' . Cmd  (25)
	Cmd : IF '(' E ')' . Cmd ELSE Cmd  (26)

	IF  shift 31
	WHILE  shift 32
	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	'{'  shift 27
	.  error

	Bloco  goto 36
	Cmd  goto 71
	E  goto 39


state 69
	Cmd : WHILE '(' E ')' . Cmd  (27)

	IF  shift 31
	WHILE  shift 32
	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	'{'  shift 27
	.  error

	Bloco  goto 36
	Cmd  goto 72
	E  goto 39


state 70
	Funcao : TipoOuVoid IDENT '(' . ListaParametrosOuVazio ')' Bloco  (14)
	ListaParametrosOuVazio : .  (18)

	INT  shift 1
	DOUBLE  shift 2
	BOOLEAN  shift 3
	')'  reduce 18

	Tipo  goto 15
	ListaParametrosOuVazio  goto 73
	ListaParametros  goto 17


71: shift/reduce conflict (shift 74, reduce 25) on ELSE
state 71
	Cmd : IF '(' E ')' Cmd .  (25)
	Cmd : IF '(' E ')' Cmd . ELSE Cmd  (26)

	ELSE  shift 74
	IF  reduce 25
	WHILE  reduce 25
	NUM  reduce 25
	IDENT  reduce 25
	'('  reduce 25
	'{'  reduce 25
	'}'  reduce 25


state 72
	Cmd : WHILE '(' E ')' Cmd .  (27)

	.  reduce 27


state 73
	Funcao : TipoOuVoid IDENT '(' ListaParametrosOuVazio . ')' Bloco  (14)

	')'  shift 75
	.  error


state 74
	Cmd : IF '(' E ')' Cmd ELSE . Cmd  (26)

	IF  shift 31
	WHILE  shift 32
	NUM  shift 33
	IDENT  shift 34
	'('  shift 35
	'{'  shift 27
	.  error

	Bloco  goto 36
	Cmd  goto 76
	E  goto 39


state 75
	Funcao : TipoOuVoid IDENT '(' ListaParametrosOuVazio ')' . Bloco  (14)

	'{'  shift 27
	.  error

	Bloco  goto 77


state 76
	Cmd : IF '(' E ')' Cmd ELSE Cmd .  (26)

	.  reduce 26


state 77
	Funcao : TipoOuVoid IDENT '(' ListaParametrosOuVazio ')' Bloco .  (14)

	.  reduce 14


State 71 contains 1 shift/reduce conflict.


23 terminals, 15 nonterminals
38 grammar rules, 78 states
